<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".ContactOneActivity">

<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_title"
        android:id="@+id/contact1_title"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/contact1_img"
        android:layout_below="@+id/contact1_title"
        android:layout_alignLeft="@+id/contact1_title"
        android:layout_alignStart="@+id/contact1_title"
        android:layout_marginTop="25dp"
        android:src="@drawable/contact1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_1_fname"
        android:id="@+id/contact1_fname"
        android:layout_below="@+id/contact1_img"
        android:layout_alignLeft="@+id/contact1_img"
        android:layout_alignStart="@+id/contact1_img"
        android:layout_marginTop="25dp"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_1_lname"
        android:id="@+id/contact1_lname"
        android:layout_below="@+id/contact1_fname"
        android:layout_alignLeft="@+id/contact1_fname"
        android:layout_alignStart="@+id/contact1_fname"
        android:layout_marginTop="5dp"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_1_address"
        android:id="@+id/contact1_address"
        android:layout_below="@+id/contact1_lname"
        android:layout_alignLeft="@+id/contact1_lname"
        android:layout_alignStart="@+id/contact1_lname"
        android:layout_marginTop="25dp"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_1_phone"
        android:id="@+id/contact1_phone"
        android:layout_below="@+id/contact1_address"
        android:layout_alignLeft="@+id/contact1_address"
        android:layout_alignStart="@+id/contact1_address"
        android:layout_marginTop="25dp"
        android:textSize="25sp" />
</RelativeLayout>
