<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".ContactTwoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_title"
        android:id="@+id/contact2_title"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/contact2_img"
        android:layout_below="@+id/contact2_title"
        android:layout_alignLeft="@+id/contact2_title"
        android:layout_alignStart="@+id/contact2_title"
        android:layout_marginTop="25dp"
        android:src="@drawable/contact2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_2_fname"
        android:id="@+id/contact2_fname"
        android:layout_below="@+id/contact2_img"
        android:layout_alignLeft="@+id/contact2_img"
        android:layout_alignStart="@+id/contact2_img"
        android:layout_marginTop="25dp"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_2_lname"
        android:id="@+id/contact2_lname"
        android:layout_below="@+id/contact2_fname"
        android:layout_alignLeft="@+id/contact2_fname"
        android:layout_alignStart="@+id/contact2_fname"
        android:layout_marginTop="5dp"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_2_address"
        android:id="@+id/contact2_address"
        android:layout_below="@+id/contact2_lname"
        android:layout_alignLeft="@+id/contact2_lname"
        android:layout_alignStart="@+id/contact2_lname"
        android:layout_marginTop="25dp"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_2_phone"
        android:id="@+id/contact2_phone"
        android:layout_below="@+id/contact2_address"
        android:layout_alignLeft="@+id/contact2_address"
        android:layout_alignStart="@+id/contact2_address"
        android:layout_marginTop="25dp"
        android:textSize="25sp" />
</RelativeLayout>
