<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".AddressBookActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_book_title"
        android:id="@+id/address_title"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_1_lname"
        android:id="@+id/contact_1_lname_txt"
        android:layout_below="@+id/address_title"
        android:layout_alignLeft="@+id/address_title"
        android:layout_alignStart="@+id/address_title"
        android:layout_marginTop="40dp"
        android:textSize="25sp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_view_contact_txt"
        android:id="@+id/btn_contact1"
        android:layout_below="@+id/contact_1_lname_txt"
        android:layout_alignLeft="@+id/contact_1_lname_txt"
        android:layout_alignStart="@+id/contact_1_lname_txt"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_2_lname"
        android:id="@+id/contact_2_lname_txt"
        android:layout_below="@+id/btn_contact1"
        android:layout_alignLeft="@+id/btn_contact1"
        android:layout_alignStart="@+id/btn_contact1"
        android:layout_marginTop="25dp"
        android:textSize="25sp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_view_contact_txt"
        android:id="@+id/btn_contact2"
        android:layout_below="@+id/contact_2_lname_txt"
        android:layout_alignLeft="@+id/contact_2_lname_txt"
        android:layout_alignStart="@+id/contact_2_lname_txt"
        android:layout_marginTop="5dp" />

</RelativeLayout>
